[tool.poetry]
name = "pydmd"
version = "0.1.0"
description = "Dynamic mode decompositon in python."
authors = ["Andy Goldschmidt <andygold@uw.edu>"]
license = "MIT"
readme = "README.rst"


[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.3"
scipy = "^1.4.1"
matplotlib = "^3.2.1"

# docs
pytest = "^5.2"
sphinx = "^3.0.2"
nbsphinx = "^0.6.1"

[tool.poetry.extras]
docs = ["sphonx",
        "nbsphinx"]

test = ["pytest"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
