[tool.poetry]
name = "pydmd"
version = "0.1.0"
description = "Dynamic mode decompositon in python."
authors = ["Andy Goldschmidt <andygold@uw.edu>"]
license = "MIT"
readme = "README.rst"


[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.3"
scipy = "^1.4.1"
matplotlib = "^3.2.1"

# docs
pytest = {version = "^5.2", optional = true}
sphinx = {version = "^3.0.2", optional = true}
nbsphinx = {version = "^0.6.1", optional = true}
jupyter_client = {version = "^6.1.3", optional = true}
ipykernel = {version = "^5.2.1", optional = true}


[tool.poetry.extras]
docs = ["sphinx",
        "nbsphinx"]

test = ["pytest"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
